Fix code overflow

--- a/components/mdx/code/code.module.scss
+++ b/components/mdx/code/code.module.scss
@@ -3,6 +3,7 @@
   font-family: 'Fira Mono', monospace;
   font-weight: 500;
   overflow: auto;
+  display: block;
 
   @include mediaquery('lg') {
     &::-webkit-scrollbar {
