--- a/components/mdx/pre/pre.module.scss
+++ b/components/mdx/pre/pre.module.scss
@@ -3,7 +3,7 @@
 .pre[class*='language-'],
 .pre {
   margin: 4rem 0;
-  overflow: hidden;
+  // overflow-x: scroll;
   font-size: 1.7rem;
   line-height: 1.7;
   width: 100%;
